test_regress/t/t_var_dup_bad.out
%Error: t/t_var_dup_bad.v:16:7: Duplicate declaration of signal: 'a'
   16 |   reg a;
      |       ^
        t/t_var_dup_bad.v:15:7: ... Location of original declaration
   15 |   reg a;
      |       ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_var_dup_bad.v:19:11: Duplicate declaration of signal: 'l'
   19 |   integer l;
      |           ^
        t/t_var_dup_bad.v:18:11: ... Location of original declaration
   18 |   integer l;
      |           ^
%Error: t/t_var_dup_bad.v:22:7: Duplicate declaration of signal: 'b'
   22 |   bit b;
      |       ^
        t/t_var_dup_bad.v:21:7: ... Location of original declaration
   21 |   bit b;
      |       ^
%Error: t/t_var_dup_bad.v:25:10: Duplicate declaration of signal: 'o'
   25 |   output o;
      |          ^
        t/t_var_dup_bad.v:24:10: ... Location of original declaration
   24 |   output o;
      |          ^
%Error: t/t_var_dup_bad.v:28:9: Duplicate declaration of signal: 'i'
   28 |   input i;
      |         ^
        t/t_var_dup_bad.v:27:9: ... Location of original declaration
   27 |   input i;
      |         ^
%Error: t/t_var_dup_bad.v:31:9: Duplicate declaration of signal: 'oi'
   31 |   input oi;
      |         ^~
        t/t_var_dup_bad.v:30:10: ... Location of original declaration
   30 |   output oi;
      |          ^~
%Error: t/t_var_dup_bad.v:35:7: Duplicate declaration of signal: 'og'
   35 |   reg og;
      |       ^~
        t/t_var_dup_bad.v:33:10: ... Location of original declaration
   33 |   output og;
      |          ^~
%Error: t/t_var_dup_bad.v:38:14: Duplicate declaration of signal: 'org'
   38 |   output reg org;
      |              ^~~
        t/t_var_dup_bad.v:37:14: ... Location of original declaration
   37 |   output reg org;
      |              ^~~
%Error: t/t_var_dup_bad.v:62:10: Duplicate declaration of signal: 'bad_reout_port'
   62 |   output bad_reout_port;
      |          ^~~~~~~~~~~~~~
        t/t_var_dup_bad.v:60:12: ... Location of original declaration
   60 |     output bad_reout_port
      |            ^~~~~~~~~~~~~~
%Error: t/t_var_dup_bad.v:69:8: Duplicate declaration of signal: 'bad_rewire'
   69 |   wire bad_rewire;
      |        ^~~~~~~~~~
        t/t_var_dup_bad.v:66:17: ... Location of original declaration
   66 |     output wire bad_rewire,
      |                 ^~~~~~~~~~
%Error: t/t_var_dup_bad.v:70:7: Duplicate declaration of signal: 'bad_rereg'
   70 |   reg bad_rereg;
      |       ^~~~~~~~~
        t/t_var_dup_bad.v:67:16: ... Location of original declaration
   67 |     output reg bad_rereg
      |                ^~~~~~~~~
%Error: t/t_var_dup_bad.v:12:6: Duplicate declaration of port: 'oi'
   12 |   i, oi
      |      ^~
        t/t_var_dup_bad.v:30:10: ... Location of original declaration
   30 |   output oi;
      |          ^~
%Error: t/t_var_dup_bad.v:48:5: Duplicate declaration of port: 'bad_duport'
   48 |     bad_duport
      |     ^~~~~~~~~~
        t/t_var_dup_bad.v:50:10: ... Location of original declaration
   50 |   output bad_duport;
      |          ^~~~~~~~~~
%Error: t/t_var_dup_bad.v:55:12: Duplicate declaration of port: 'bad_mixport'
   55 |     output bad_mixport
      |            ^~~~~~~~~~~
        t/t_var_dup_bad.v:55:12: ... Location of original declaration
   55 |     output bad_mixport
      |            ^~~~~~~~~~~
%Error: t/t_var_dup_bad.v:40:8: Can't find definition of variable: 'bad_duport'
   40 |   sub0 sub0 (.*);
      |        ^~~~
%Error: t/t_var_dup_bad.v:40:8: Duplicate pin connection: 'bad_duport'
   40 |   sub0 sub0 (.*);
      |        ^~~~
        t/t_var_dup_bad.v:40:8: ... Location of original pin connection
   40 |   sub0 sub0 (.*);
      |        ^~~~
%Error: t/t_var_dup_bad.v:41:8: Can't find definition of variable: 'bad_mixport'
                              : ... Suggested alternative: 'bad_duport'
   41 |   sub1 sub1 (.*);
      |        ^~~~
%Error: t/t_var_dup_bad.v:41:8: Duplicate pin connection: 'bad_mixport'
   41 |   sub1 sub1 (.*);
      |        ^~~~
        t/t_var_dup_bad.v:41:8: ... Location of original pin connection
   41 |   sub1 sub1 (.*);
      |        ^~~~
%Error: t/t_var_dup_bad.v:42:8: Can't find definition of variable: 'bad_reout_port'
                              : ... Suggested alternative: 'bad_duport'
   42 |   sub2 sub2 (.*);
      |        ^~~~
%Error: t/t_var_dup_bad.v:43:8: Can't find definition of variable: 'bad_rewire'
   43 |   sub3 sub3 (.*);
      |        ^~~~
%Error: t/t_var_dup_bad.v:43:8: Can't find definition of variable: 'bad_rereg'
                              : ... Suggested alternative: 'bad_rewire'
   43 |   sub3 sub3 (.*);
      |        ^~~~
%Error: Exiting due to
